--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -15,6 +15,7 @@
 @import "../_sass/pagination";
 @import "../_sass/filter-items";
 @import "../_sass/forms";
+@import "../_sass/publications";
 
 /*********************
 RETINA (2x RESOLUTION DEVICES)
