--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -111,22 +111,6 @@ p{
 
 .fond__green2 {
 
-  animation: colorchange 30s infinite;
-  -webkit-animation: colorchange 30s infinite;
-
-  /*background-color: $red; /* #21202E;  For browsers that do not support gradients */
-  /*	background: -webkit-linear-gradient(-30deg, #E94AA1, #F23A3A); /* For Safari 5.1 to 6.0 */
-  /*background: -o-linear-gradient(-30deg, #E94AA1, #F23A3A); /* For Opera 11.1 to 12.0*/
-  /*background: -moz-linear-gradient(-30deg, #83E94A, #D1FF00); /* For Firefox 3.6 to 15 */
-  /*background: linear-gradient(-30deg, #E94AA1, #F23A3A); /* Standard syntax
-  }
-
-.fond__mint { background-color: $mint;
-  background-color: red; /* For browsers that do not support gradients */
-  /* 	background: -webkit-linear-gradient(-30deg, #83E94A, #D1FF00); /* For Safari 5.1 to 6.0 */
-  /*background: -o-linear-gradient(-30deg, #83E94A, #D1FF00); /* For Opera 11.1 to 12.0 */
-  /*background: -moz-linear-gradient(-30deg, #83E94A, #D1FF00); /* For Firefox 3.6 to 15 */
-  /*	background: linear-gradient(-30deg, #83E94A, #D1FF00); /* Standard syntax */
 }
 
 .fond__grey {
@@ -237,7 +221,7 @@ p{
 
 
 body {
-  @extend .fond__grey;
+  @extend .fond__white;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -552,7 +536,12 @@ label {
 }
 
 .meta-links-foot {
+  p {
+    font-size: 12px;
+  }
+
   a{
+    font-size: 12px;
     text-decoration: none;
     margin-right: 10px;
 
@@ -562,9 +551,13 @@ label {
 
     &:hover{
       color: $purple;
+      text-decoration: none;
     }
   }
-;
+}
+
+.logos-wrap{
+  margin-top: 3em;
 }
 
 .foot-note {
