--- a/_includes/idea-teaser-tile.html
+++ b/_includes/idea-teaser-tile.html
@@ -1,20 +1,17 @@
 <div class="post-teaser-inner idea">
-    {% assign path = include.post.url %}
+  {% assign path = include.post.url %}
+  <a href="{{ path }}">
     <div class="post-teaser-content">
-        <a class="post-teaser-read-more" href="{{ path }}">
-            <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
-        </a>
-        <div class="post-teaser-description workshop">
-            <p>
-                {{ include.post.teaser | remove: '<p>' | remove: '</p>'}}
-                {% if include.post.desc %}{{ include.post.desc }}{% endif %}
-            </p>
-            {% if include.post.dauer %}
-            <p>⏰ {{ site.data.materialsammlung.zeitbedarf[include.post.dauer] }}</p>
-            {% endif %}
-            <a class="post-teaser-read-more" href="{{ path }}">mehr...</a>
-        </div>
+      <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
+      <div class="post-teaser-description workshop">
+        <p>
+            {{ include.post.teaser | remove: '<p>' | remove: '</p>'}}
+            {% if include.post.desc %}{{ include.post.desc }}{% endif %}
+        </p>
+        {% if include.post.dauer %}
+        <p>⏰ {{ site.data.materialsammlung.zeitbedarf[include.post.dauer] }}</p>
+        {% endif %}
+      </div>
     </div>
+  </a>
 </div>
-
-
