--- a/_includes/thema-teaser-tile.html
+++ b/_includes/thema-teaser-tile.html
@@ -1,30 +1,22 @@
 <div class="post-teaser-inner thema">
-    {% assign path = include.post.url %}
-
+  {% assign path = include.post.url %}
+  <a href="{{ path }}">
     <div class="post-teaser-content" style="position: realative;">
-        <a href="{{ path }}">
-            <div class="post-teaser-img" style="background-image: url('{{ site.baseurl }} {{ include.post.img }}')">
-            &nbsp;
-            </div>
-        </a>
-        <div class="post-teaser-txt">
-
-            <div class="post-teaser-description workshop">
-                <p>Thema</p>
-                <a href="{{ path }}">
-                    <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
-                </a>
-                <p>
-                {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
-                {{ include.post.teaser }}
-                </p>
-
-                <a href="{{ path }}">mehr...</a>
-            </div>
+      <div class="post-teaser-img" style="background-image: url('{{ site.baseurl }} {{ include.post.img }}')">&nbsp;
+      </div>
+      <div class="post-teaser-txt">
+        <div class="post-teaser-description workshop">
+          <p>Thema</p>
+          <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
+          <p>
+            {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
+            {{ include.post.teaser }}
+          </p>
         </div>
-        <div style="clear: both;">&nbsp;</div>
-
+      </div>
+    <div style="clear: both;">&nbsp;</div>
     </div>
+  </a>
 </div>
 
 
