--- a/_includes/unter-thema-teaser-tile.html
+++ b/_includes/unter-thema-teaser-tile.html
@@ -1,18 +1,15 @@
 <div class="post-teaser-inner {{ site.data.materialsammlung.unterthema-color[include.post.unterthema] }}">
-    {% assign path = include.post.url %}
-    <a href="{{post.link}}">
-        <img src="{{post.img}}" class="img-responsive" />
-    </a>
+  {% assign path = include.post.url %}
+  <a href="{{ path }}">
+    <img src="{{post.img}}" class="img-responsive" />
     <div class="post-teaser-content thema">
-        <a href="{{ path }}"><h3 class="post-teaser-title" >{{ include.post.title }}</h3></a>
-        <div class="post-teaser-description workshop">
-            <p>
-                {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
-                {{ include.post.teaser }}
-            </p>
-            <a class="post-teaser-read-more" href="{{ path }}">mehr...</a>
-        </div>
+      <h3 class="post-teaser-title" >{{ include.post.title }}</h3>
+      <div class="post-teaser-description workshop">
+        <p>
+          {{ post.ws_teaser | remove: '<p>' | remove: '</p>'}}
+          {{ include.post.teaser }}
+        </p>
+      </div>
     </div>
+  </a>
 </div>
-
-
