--- a/_sass/_post-teaser.scss
+++ b/_sass/_post-teaser.scss
@@ -32,9 +32,17 @@
     display: block;
     transition: 200ms;
 
+    a{
+      color: black;
+      text-decoration: none;
+    }
+
     &:hover{
       @include transition(box-shadow .25s ease);
       box-shadow: 0 0 35px 1px rgba(197, 197, 197, 0.7);
+      color: black;
+      text-decoration: none;
+
       //transform: scale(1.005);
     }
 
@@ -117,10 +125,15 @@
         float: right;
         width: 50%;
         padding-left: 40px;
+        a{
+          color: black;
+        }
+        a:hover{
+          color: black;
+          text-decoration: none;
+        }
       }
-      .post-teaser-meta{
 
-      }
       .post-teaser-description{
         color: #4a5b6b;
 
@@ -133,6 +146,7 @@
           }
           a{
             color: black;
+            text-decoration: none;
           }
           a:hover{
             color: black;
