--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -56,7 +56,7 @@ hide_hero: true
                         </div>
                         <div class="filter-items green ideas col-xs-24 col-lg-3 col-md-3">
                             <div class="filter-items-inner filterselect">
-                                <select data-placeholder="Bitte wählen"  data-group="skill" class="selectFilter">
+                                <select data-placeholder="Bitte wählen"  data-group="schwierigkeitsgrad" class="selectFilter">
                                     <option disabled selected>Schwierigkeit</option>
                                     <option value="{{ 's-1' }}">{{ site.data.materialsammlung.schwierigkeitsgrad['s-1'] }}</option>
                                     <option value="{{ 's-2' }}">{{ site.data.materialsammlung.schwierigkeitsgrad['s-2'] }}</option>
@@ -74,6 +74,9 @@ hide_hero: true
                     <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
                     {% for p in site.pages %}
                       {% if p.layout contains 'idee' %}
+                        {% if p.schwierigkeitsgrad %}
+                            {% assign schwierigkeitsgrad = p.schwierigkeitsgrad %}
+                        {% endif %}
                         {% if p.dauer %}
                             {% assign dauer = p.dauer %}
                         {% endif %}
@@ -93,7 +96,7 @@ hide_hero: true
                                 {% endif %}
                             {% endif %}
                           {% endfor %}
-                          <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser idea {{ thema }} {{ tool }} {{ dauer }}">
+                          <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser idea {{ thema }} {{ tool }} {{ dauer }} {{ schwierigkeitsgrad }}">
                               {% include idea-teaser-tile.html post=p %}
                           </div>
                       {% endif %}
