--- a/_includes/post-teaser-tile.html
+++ b/_includes/post-teaser-tile.html
@@ -9,7 +9,7 @@
     <span class="post-date">{{ post.date | date: "%d.%m.%y" }}</span>
       <a href="{{post.url}}"><h3 class="post-teaser-title" >{{ post.title }}</h3></a>
     <div class="post-teaser-description">
-      <a class="post-teaser-read-more" href="{{post.url}}">⟶</a>
+      <a class="post-teaser-read-more" href="{{post.url}}"></a>
     </div>
   </div>
 </div>
