--- a/_sass/_1024.scss
+++ b/_sass/_1024.scss
@@ -40,3 +40,26 @@
     padding-left: 25px;
   }
 }
+
+
+
+.stats{   
+  p {
+    font-size: 14px;
+  }
+}
+
+.datenschutzhinweis {
+  p{
+    font-size: 14px;
+    color: #8C9094;
+    a{
+      font-size: 14px;
+      color: black;
+    }
+    a:hover{
+      font-size: 14px;
+      color: blue;
+    }
+  }
+}
