--- a/_includes/post-teaser.html
+++ b/_includes/post-teaser.html
@@ -1,31 +1,29 @@
 <div class="event-wrapper fond__white clearfix blog-post-teaser">
-    <div class="post-header clearfix">
-        <h3 class="post-title" ><a href="{{ post.url }}">{{ post.title }}</a></h3>
-    </div>
+  <div class="post-header clearfix">
+    <h3 class="post-title" ><a href="{{ post.url }}">{{ post.title }}</a></h3>
+  </div>
 
-    <div class="post-meta">
-        <span class="blog-author-and-date"> von {{ post.author }} am {{ post.date | date: "%d.%m.%y" }}</span><br>
+  <div class="post-meta">
+    <span class="blog-author-and-date"> von {{ post.author }} am {{ post.date | date: "%d.%m.%y" }}</span><br>
 
-        {% unless post.tags == empty %}
-            <span class="blog-tags"> in: {% for tag in post.tags %} <a href="/blog/{{ tag | replace:' ','-' | downcase }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %} {% endfor %}</span>
-        {% endunless %}
-    </div> 
+    {% unless post.tags == empty %}
+        <span class="blog-tags"> in: {% for tag in post.tags %} <a href="/blog/{{ tag | replace:' ','-' | downcase }}">{{ tag }}</a>{% unless forloop.last %}, {% endunless %} {% endfor %}</span>
+    {% endunless %}
+  </div> 
 
-
-    {% if post.images %}
-        <a href="{{ post.url }}"><img src="/assets/blog/{{ post.images[0].imgname }}" width="300" alt="{{ post.images[0].alt }}" class="img-responsive"></a>
-        {% if post.images[0].sub %}<span class="post-img-caption">
-            {{ post.images[0].sub }}</span>
-        {% endif %}
+  {% if post.images %}
+    <a href="{{ post.url }}"><img src="/assets/blog/{{ post.images[0].imgname }}" width="300" alt="{{ post.images[0].alt }}" class="img-responsive"></a>
+    {% if post.images[0].sub %}<span class="post-img-caption">
+        {{ post.images[0].sub }}</span>
     {% endif %}
+  {% endif %}
 
-    <div class="post-description">
-        <p>
-            {{ post.excerpt | remove: '<p>' | remove: '</p>'}} <br>
-                <font color="#C0C0C0"><a class="btn btn-blog" href="{{ post.url }}">Mehr</a></font>
-        </p>
-    </div>
-    <br><br>
+  <div class="post-description">
+    <p>{{ post.excerpt | remove: '<p>' | remove: '</p>'}} <br>
+      <font color="#C0C0C0"><a class="btn btn-blog" href="{{ post.url }}">Mehr</a></font>
+    </p>
+  </div>
+  <br><br>
 </div> 
 
 
