--- a/_layouts/idee.html
+++ b/_layouts/idee.html
@@ -5,69 +5,69 @@ hide_hero: true
 
 ---
 
-
-<div class="row">
-    <div class="col-xs-12 fond__white jumbotron">
-        <div class="row">
-            <div class="container">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <div class="page-sub-material"><a href="./index.html"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
-                    <p>
-                        {% if page.dauer %}
-                            ⏰ {{ site.data.materialsammlung.zeitbedarf[page.dauer] }}
-                        {% endif %}
-                        {% if page.themacontent or page.subtool %}
-                            💡 <a href="#projektideen"> Diese Themen und Tools sind mit der vorliegenden Idee verbunden.</a>
-                        {% endif %}
-                    </p>
-                    <hr>
-                    <h1 class="section-headline">{{ page.title }}</h1>
-                    <p style="font-style: italic;">{{ page.desc }}</p>
-                    <p>
-                      {{ content }}
-                    </p>
-                    {% if page.link %}
-                    <center><a href="{{ page.link }}" type="button" class="btn btn-default" style="background-color: #00f9ac; color: black">Mehr zur Idee</a></center>
-                    {% endif %}
-                    {% if page.themacontent or page.subtool %}
-                        <hr>
-                        <h2 id="projektideen">Verbundene Themen und Tools</h2>
-                        <p>Diese Projektidee ist ein Beispiel dafür, wie du ein Thema mit Hilfe eines Tools angehen kannst. Folgende Themen und Tools sind mit der vorliegenden Idee verbunden:</p>
-                    {% endif %}
-                </div>
-            </div>
-            <div class="container">
-                <div class="isotope-wrap">
-                    <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
-                    {% for p in site.pages %}
-                    {% if p.layout == 'unterthema'%}
-                      {% assign pa = page.themacontent | replace:' ','' | split:',' %}
-                      {% if pa contains p.themacontent %}
-                      <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
-                          {% include unter-thema-ideen-teaser-tile.html post=p %}
-                      </div>
-                      {% endif %}
-                    {% endif %}
-                    {% if p.layout == 'untertool' %}
-                      {% assign pa = page.subtool | replace:' ','' | split:',' %}
-                      {% if pa contains p.subtool %}
-                      <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser tool">
-                          {% include tool-teaser-tile.html post=p %}
-                      </div>
-                      {% endif %}
-                    {% endif %}
-                    {% endfor %}
-                </div>
-            </div>
-            {% if page.owner != '' %}
-            <div class="container">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <hr>
-                    <p>Dieses Material wurde von der Organisation <a href="{{ site.data.materialsammlung.owner-link-list[page.owner] }}" target="_blank">{{ site.data.materialsammlung.owner-name-list[page.owner] }}</a> entwickelt und steht unter der Lizenz <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0 </a>| OKF DE{% if site.data.materialsammlung.owner-short-name-list[page.owner] %}/{{ site.data.materialsammlung.owner-short-name-list[page.owner] }}{% endif %}</p>
-                    <hr>
-                </div>
-            </div>
-            {% endif %}
-        </div>
+<div class="col-xs-12 fond__white jumbotron">
+  <div class="row">
+    <div class="container">
+      <div class="col-lg-6 col-md-6 col-lg-offset-3 col-md-offset-3">
+        <div class="page-sub-material"><a href="./index.html"><p class="sub-material-arrow-back"><img src="/static/img/arrow.svg"> Zurück</p></a></div>
+        <p>
+          {% if page.dauer %}
+            ⏰ {{ site.data.materialsammlung.zeitbedarf[page.dauer] }}
+          {% endif %}
+        </p>
+        <h1 class="section-headline">{{ page.title }}</h1>
+        <p style="font-style: italic;">{{ page.desc }}</p>
+        <p>
+          {{ content }}
+        </p>
+        {% if page.link %}
+        <center><a href="{{ page.link }}" type="button" class="btn btn-default" style="background-color: #00f9ac; color: black">Mehr zur Idee</a></center>
+        {% endif %}
+      </div>
     </div>
+  </div>
+</div>
+<div class="col-xs-12 fond__white jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2 text-center">
+        {% if page.themacontent or page.subtool %}
+          <h2 id="projektideen">Verbundene Themen und Tools</h2>
+          <p>Diese Projektidee ist ein Beispiel dafür, wie du ein Thema mit Hilfe eines Tools angehen kannst. Folgende Themen und Tools sind mit der vorliegenden Idee verbunden:</p>
+        {% endif %}
+      </div>
+    </div>
+    <div class="container">
+      <div class="isotope-wrap">
+        <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+        {% for p in site.pages %}
+        {% if p.layout == 'unterthema'%}
+          {% assign pa = page.themacontent | replace:' ','' | split:',' %}
+          {% if pa contains p.themacontent %}
+          <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+            {% include unter-thema-ideen-teaser-tile.html post=p %}
+          </div>
+          {% endif %}
+        {% endif %}
+        {% if p.layout == 'untertool' %}
+          {% assign pa = page.subtool | replace:' ','' | split:',' %}
+          {% if pa contains p.subtool %}
+          <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser tool">
+            {% include tool-teaser-tile.html post=p %}
+          </div>
+          {% endif %}
+        {% endif %}
+        {% endfor %}
+      </div>
+    </div>
+    {% if page.owner != '' %}
+    <div class="container">
+      <div class="col-lg-10 col-lg-offset-1">
+          <hr>
+          <p>Dieses Material wurde von der Organisation <a href="{{ site.data.materialsammlung.owner-link-list[page.owner] }}" target="_blank">{{ site.data.materialsammlung.owner-name-list[page.owner] }}</a> entwickelt und steht unter der Lizenz <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">CC-BY 4.0 </a>| OKF DE{% if site.data.materialsammlung.owner-short-name-list[page.owner] %}/{{ site.data.materialsammlung.owner-short-name-list[page.owner] }}{% endif %}</p>
+          <hr>
+      </div>
+    </div>
+    {% endif %}
+  </div>
 </div>
