--- a/_sass/_1400.scss
+++ b/_sass/_1400.scss
@@ -17,3 +17,25 @@ place.
 .section-sub-material{
     text-align: center;
 }
+
+
+.stats{   
+  p {
+    font-size: 14px;
+  }
+}
+
+.datenschutzhinweis {
+  p{
+    font-size: 14px;
+    color: #8C9094;
+    a{
+      font-size: 14px;
+      color: black;
+    }
+    a:hover{
+      font-size: 14px;
+      color: blue;
+    }
+  }
+}
