--- a/_sass/_contentpage-elements.scss
+++ b/_sass/_contentpage-elements.scss
@@ -19,7 +19,7 @@ contentpage elements
   &.infobox{
     @include teaser-shadow();
 
-    background-color: $blue;
+    background-color: $grey-bright;
     color: $black;
     text-align: left;
     width: 40%;
@@ -47,7 +47,7 @@ contentpage elements
     .infobox-copy {
     a{
       font-weight: bold;
-      color: white;
+      color: black;
     }
     a:hover {
       text-decoration: underline;
@@ -55,14 +55,18 @@ contentpage elements
     }
     }
     .infobox-headline, .infobox-copy{
-      color: white;
+      color: black;
       display: block;
 
     }
     ul{
-        color: white;
+        color: black;
         line-height: 1.5;
         padding-left: 20px;
+    }
+
+    li{
+      font-size: 15px;
     }
   }
     &.left{
