changed cat. name

--- a/_layouts/ideas.html
+++ b/_layouts/ideas.html
@@ -57,7 +57,7 @@ hide_hero: true
                         <div class="filter-items green ideas col-xs-24 col-lg-3 col-md-3">
                             <div class="filter-items-inner filterselect">
                                 <select data-placeholder="Bitte wählen"  data-group="schwierigkeitsgrad" class="selectFilter">
-                                    <option disabled selected>Schwierigkeit</option>
+                                    <option disabled selected>Level</option>
                                     <option value="{{ 's-1' }}">{{ site.data.materialsammlung.schwierigkeitsgrad['s-1'] }}</option>
                                     <option value="{{ 's-2' }}">{{ site.data.materialsammlung.schwierigkeitsgrad['s-2'] }}</option>
                                     <option value="{{ 's-3' }}">{{ site.data.materialsammlung.schwierigkeitsgrad['s-3'] }}</option>
