--- a/_layouts/workshop-detail.html
+++ b/_layouts/workshop-detail.html
@@ -40,83 +40,94 @@
 
 <div class="body-wrap">
 	<div class="page-wrap">
-        {% include header-nav.liquid %}
+      {% include header-nav.liquid %}
+      <div class="container">
+        {% if page.hide_hero != true %}
+          <div class="hero-wrap" style="background-image:url({{ page.img_full }});"></div>
+        {% endif %}
+      </div>
+      <div class="jumbotron fond__white">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-10 col-lg-offset-1 section-intro">
+              <h2 class="section-headline">{{ page.title }}</h2>
+              <p>{{ page.ws_teaser }}</p>
+              <p>
+                  Thema: {{ page.thema }} –   
+                  Prinzip: {{ page.prinzip }} – 
+                  Dauer: {{ page.dauer }}
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row text__black">
+            <div class="col-lg-8 col-lg-offset-2">
+              <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+                </li>
+              </ul>
+              <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">...</div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
+                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
+              </div>
+              <div class="container">{{ content }}</div>
+            </div>
+          </div>
+        </div>
+        {% if page.downloads.size > 0 %}
+          <div class="container">
+            <div class="row text__black">
+              <div class="col-lg-7 col-lg-offset-2">
+                <h3>Downloads</h3>
+                {% for dwl in page.downloads %}
+                <a href="{{ dwl.file }}" class="btn-download" target="_blank"><span>{{ dwl.name }}</span></a>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        {% endif %}
+    </div>
+    <div class="container">
+      <div class="jumbotron related-workshop-background">
         <div class="row">
-            {% if page.hide_hero != true %}
-                <div class="hero-wrap" style="background-image:url({{ page.img_full }});"></div>
-                {% if site.data.events  %}
-                    {% include event-calendar.html %}
+          <h2 class="section-headline text-center text__black">Weitere Workshops</h2>
+          <div class="isotope-wrap">
+            <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
+            {% assign maxRelated = 3 %}
+            {% assign maxRelatedCounter = 0 %}
+            {% assign randomWorkshops = site.workshops | sample:4 %}
+            {% for post in randomWorkshops %}
+              {% if post.title != page.title %}
+                <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
+                  {% include workshop-teaser-tile.html post=post %}
+                </div>
+                {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
+                {% if maxRelatedCounter >= maxRelated %}
+                {% break %}
                 {% endif %}
-            {% endif %}
+              {% endif %}
+            {% endfor %}
+          </div>
         </div>
-        <div class="jumbotron fond__white">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-10 col-lg-offset-1 section-intro">
-                        <h2 class="section-headline">{{ page.title }}</h2>
-                        <p>{{ page.ws_teaser }}</p>
-                        <p>
-                            Thema: {{ page.thema }} –   
-                            Prinzip: {{ page.prinzip }} – 
-                            Dauer: {{ page.dauer }}
-                        </p>
-                    </div>
-                </div>
-            </div>
-                <div class="row">
-                    <div class="container text__black">
-                        <div class="col-lg-8 col-lg-offset-2">
-                            <div class="container">{{ content }}</div>
-                        </div>
-                    </div>
-                </div>
-            {% if page.downloads.size > 0 %}
-                <div class="row">
-                    <div class="container text__black">
-                        <div class="col-lg-7 col-lg-offset-2">
-                            <h3>Downloads</h3>
-                            {% for dwl in page.downloads %}
-                            <a href="{{ dwl.file }}" class="btn-download" target="_blank"><span>{{ dwl.name }}</span></a>
-                            {% endfor %}
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
+        <div class="btn-wrap">
+          <a href="/workshops"><button  class="btn btn-start color-2">Zur Workshopübersicht</button> </a>
         </div>
-        <div class="row">
-            <div class="jumbotron related-workshop-background">
-                <div class="container">
-                    <h2 class="section-headline text-center text__black">Weitere Workshops</h2>
-                    <div class="isotope-wrap">
-                        <div class="grid-sizer col-xs-12 col-md-6 col-lg-4"></div>
-                        {% assign maxRelated = 3 %}
-                        {% assign maxRelatedCounter = 0 %}
-                        {% assign randomWorkshops = site.workshops | sample:4 %}
-                        {% for post in randomWorkshops %}
-                            {% if post.title != page.title %}
-                                <div class="col-xs-12 col-md-6 col-lg-4 isotope-item post-teaser">
-                                    {% include workshop-teaser-tile.html post=post %}
-                                </div>
-                                {% assign maxRelatedCounter = maxRelatedCounter | plus: 1 %}
-                                {% if maxRelatedCounter >= maxRelated %}
-                                {% break %}
-                                {% endif %}
-                            {% endif %}
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="btn-wrap">
-                    <a href="/workshops"><button  class="btn btn-start color-2">Zur Workshopübersicht</button> </a>
-                </div>
-            </div>
-        </div>
+      </div>
+    </div>
 	</div>
 </div>
 
 {% include footer.html %}
-
 {% include scripts.html %}
-
 {% include piwik.html %}
 </body>
 
