--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -621,10 +621,10 @@ label {
 }
 
 .members-image-wrap, .members-image-content{
-//  position: relative;
-//  left: 50%;
-//  transform: translateX(-50%);
-//  display: inline-block;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
 }
 
 
@@ -1457,8 +1457,9 @@ newsletter ende
  .member-avatar {
    margin: 60px auto 10px auto;
    width: 100%;
-   height: auto;
-
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
  }
 }
 
